<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Rounded Gradient Container -->
        <LinearLayout
            android:id="@+id/welcomeCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_welcome_gradient"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/card_horizontal_padding"
            android:paddingTop="@dimen/card_top_padding"
            android:paddingRight="@dimen/card_horizontal_padding"
            android:paddingBottom="@dimen/card_bottom_padding">

            <!-- Wallet Icon -->
            <ImageView
                android:id="@+id/walletIcon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="@dimen/icon_margin_top"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:contentDescription="@string/wallet_icon_desc"
                android:src="@drawable/ic_wallet" />

            <!-- App Name -->
            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_xsmall"
                android:text="@string/app_name_display"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/text_app_name"
                android:textStyle="bold" />

            <!-- Tagline -->
            <TextView
                android:id="@+id/tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/tagline"
                android:textColor="#E3EDFF"
                android:textSize="@dimen/text_tagline" />

            <!-- Description -->
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:layout_marginBottom="@dimen/spacing_xlarge"
                android:gravity="center"
                android:paddingLeft="@dimen/description_horizontal_padding"
                android:paddingRight="@dimen/description_horizontal_padding"
                android:text="@string/description"
                android:textColor="#F2F6FF"
                android:textSize="@dimen/text_description" />

            <!-- Welcome -->
            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="#FFFFFF"
                android:layout_marginTop="@dimen/welcome_margin_top"
                android:textSize="@dimen/text_welcome"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/signInPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:text="@string/sign_in_prompt"
                android:textColor="#E3EDFF"
                android:textSize="@dimen/text_subtitle" />

        </LinearLayout>

        <!-- Sign In Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="@dimen/text_button"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:minHeight="@dimen/button_min_height"
            app:backgroundTint="@null"
            android:background="@drawable/bg_signin_button"
            android:textColor="#000000" />

    </LinearLayout>

</ScrollView>